flux/apps/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: podinfo
  annotations:
    # Public ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Name of ALB
    alb.ingress.kubernetes.io/load-balancer-name: podinfo-prod-default
    # Network
    alb.ingress.kubernetes.io/subnets: subnet-07b4d67d, subnet-5ac87816, subnet-eca28485
    # AWS resource tags for ALBs
    alb.ingress.kubernetes.io/tags: "Environment=prod, Provisioner=k8s-ctrl"
    # DNS record in Route 53
    external-dns.alpha.kubernetes.io/hostname: podinfo.amc.stuartellis.org
    # HTTPS with certificate discovery
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
